fixed text wrap on google/fb buttons

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,5 +1,5 @@
 .btn{
-    width: 95%;
+    width: 50%;
     height: 50px;
 	background: #ffffff;
 	color: var(--ion-color-medium);
